convert ScriptStats to a record